--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                 { word: "million", kk: "[ˋmɪljən]", pos: "n.", def: "百萬", sentence: "There are about 23 million people in Taiwan.", trans: "臺灣約有兩千三百萬人。", emoji: "💰" },
                 { word: "pound", kk: "[paʊnd]", pos: "n.", def: "磅 (重量單位)", sentence: "The pork is on sale this week. It costs only two dollars a pound.", trans: "本週豬肉有特價。一磅只要價兩美元。", emoji: "⚖️" },
                 { word: "pick", kk: "[pɪk]", pos: "v.", def: "採摘；撿拾", sentence: "When we climbed up the mountain, we picked some flowers along the way.", trans: "我們爬山時，一路上採花。", emoji: "🤏" },
-                { word: "bean", kk: "[bin]", pos: "n.", def: "豆", sentence: "Roast chicken with green beans is the best dish at this restaurant.", trans: "烤雞佐四季豆是這家餐館的最佳菜餚。", emoji: "🫛" },
-                { word: "cent", kk: "[sɛnt]", pos: "n.", def: "美分", sentence: "He works very hard, but he only gets 80 cents an hour.", trans: "他努力工作，但他只賺取時薪八十美分。", emoji: "🪙" },
+                { word: "bean", kk: "[bin]", pos: "n.", def: "豆", sentence: "Roast chicken with green beans is the best dish at this restaurant.", trans: "烤雞佐四季豆是這家餐館的最佳菜餚。", emoji: "🫘" },
+                { word: "cent", kk: "[sɛnt]", pos: "n.", def: "美分", sentence: "He works very hard, but he only gets 80 cents an hour.", trans: "他努力工作，但他只賺取時薪八十美分。", emoji: "💲" },
                 { word: "chance", kk: "[tʃæns]", pos: "n.", def: "機會", sentence: "These kids are poor. They don't even have a chance to go to school.", trans: "這些孩童很可憐。他們甚至沒有機會上學。", emoji: "🎲" },
                 { word: "choose", kk: "[tʃuz]", pos: "v.", def: "選擇", sentence: "Teresa chose a red dress for the Christmas party.", trans: "特瑞莎選了一件紅洋裝參加耶誕派對。", emoji: "👆" },
                 { word: "hard", kk: "[hɑrd]", pos: "adv.; adj.", def: "努力地；困難的", sentence: "Albert worked hard and made a lot of money.", trans: "亞伯特工作勤奮，賺了很多錢。", emoji: "💪" },
@@ -247,7 +247,7 @@
             6: {
                 title: "Unit 6: You Can Throw a Ball, Can't You?",
                 words: [
-                { word: "pass", kk: "[pæs]", pos: "v.", def: "傳遞", sentence: "Could you pass the salt, please?", trans: "能麻煩你遞鹽給我嗎？", emoji: "🫴" },
+                { word: "pass", kk: "[pæs]", pos: "v.", def: "傳遞", sentence: "Could you pass the salt, please?", trans: "能麻煩你遞鹽給我嗎？", emoji: "➡" },
                 { word: "throw", kk: "[θro]", pos: "v.", def: "丟；投擲", sentence: "The little boy threw something out of the window.", trans: "那小男孩丟東西出窗外。", emoji: "🥎" },
                 { word: "point", kk: "[pɔɪnt]", pos: "n.", def: "得分", sentence: "David got the most points in the game.", trans: "大衛在比賽裡得到最多分。", emoji: "🔢" },
                 { word: "win", kk: "[wɪn]", pos: "v.", def: "贏；獲勝", sentence: "I believe that we'll win the game if we practice harder.", trans: "如果我們努力練習，我相信我們就能贏得比賽。", emoji: "🏆" },
@@ -623,3 +623,4 @@
     </script>
 </body>
 </html>
+
