--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                                 <div>
                                     <h1 className="text-2xl font-bold flex items-center gap-2">
                                         <BookOpen className="w-8 h-8" />
-                                        國二英語單字特訓
+                                        翰林8年級下英文單字
                                     </h1>
                                     <p className="text-indigo-200 text-sm hidden sm:block">Current: {currentUnitData.title}</p>
                                 </div>
@@ -623,5 +623,6 @@
     </script>
 </body>
 </html>
+
 
 
